--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
       </div>
     </div>
   </body><script src="js/jquery.min.js"></script>
-  <script src="js/TweenMax.min.js"></script>
-  <script src="js/ScrollToPlugin.min.js"></script>
+  <!-- <script src="js/TweenMax.min.js"></script>
+  <script src="js/ScrollToPlugin.min.js"></script> -->
   <script src="js/libs.js"></script>
   <script src="js/main.js"></script>
 </html>
